# pydico

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/pydico/: __init__.py  decorator.py  exceptions.py  types.py
src/pydico/core/: container.py  depends.py
tests/: test_container.py  test_inject_decorator.py
