[project]
name = "pydico"
version = "0.1.0"
description = "A lightweight, .NET-inspired dependency injection container for Python 3.13+ featuring Transient & Singleton lifetimes and type-safe injection."
readme = "README.md"
authors = [
    { name = "Mac0501", email = "" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
cache-dir = ".uv_cache"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "pytest>=9.0.1",
]
